# acpi

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENCE-MIT  README.md  RELEASES.md  rust-toolchain  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
acpi/: Cargo.toml
acpi-dumper/: Cargo.toml
acpi-dumper/src/: main.rs
acpi/src/: address.rs  bgrt.rs  fadt.rs  handler.rs  hpet.rs  interrupt.rs  iort.rs  lib.rs  madt.rs  managed_slice.rs  mcfg.rs  mpam.rs  platform.rs  rsdp.rs  rsdp_search.rs  sdt.rs  slit.rs  spcr.rs  srat.rs  tcpa.rs  tpm2.rs
acpi/src/pcct/: extended.rs  generic.rs  mod.rs  reduced.rs  register_based.rs
acpi/src/platform/: address.rs  interrupt.rs  mod.rs  pci.rs  processor.rs
acpi/src/sdt/: fadt.rs  spcr.rs
aml/: Cargo.toml
aml/fuzz/: Cargo.toml
aml/fuzz/fuzz_targets/: fuzz_target_1.rs
aml/src/: expression.rs  lib.rs  misc.rs  name_object.rs  namespace.rs  object.rs  op_region.rs  opcode.rs  opregion.rs  parser.rs  pci_routing.rs  pkg_length.rs  resource.rs  statement.rs  stream.rs  term_object.rs  test_utils.rs  type1.rs  type2.rs  value.rs
aml_parser/: Cargo.toml
aml_parser/src/: lib.rs  misc.rs  name_object.rs  namespace.rs  opcode.rs  parser.rs  pkg_length.rs  term_object.rs  test_utils.rs  type1.rs  type2.rs  value.rs
aml_tester/: Cargo.toml
aml_tester/src/: main.rs
dumps/asus-notebook-ux310u/: lshw.txt
example_os/: .gitignore  Cargo.toml  Makefile
example_os/src/: lib.rs  serial.rs  vga_buffer.rs
example_os/src/interrupts/: gdt.rs  mod.rs
example_os/src/memory/: area_frame_allocator.rs  mod.rs  stack_allocator.rs
example_os/src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
example_os/src/x86_64/: grub.cfg
rsdp/: Cargo.toml  README.md
rsdp/src/: handler.rs  lib.rs
rsdp_search/: Cargo.toml
rsdp_search/src/: handler.rs  lib.rs
src/: address.rs  constructed_tables_test.rs  dsdt.rs  fadt.rs  handler.rs  hpet.rs  interrupt.rs  lib.rs  madt.rs  registers.rs  rsdp.rs  rsdp_search.rs  sdt.rs
src/aml/: dsdt_info.rs  mod.rs  namespace.rs  object.rs  op_region.rs  opcodes.rs  parser.rs  pci_routing.rs  pkglength.rs  resource.rs  stream.rs  value.rs
src/aml/tests/: mod.rs  seabios_dsdt.hex  seabios_dsdt.rs
src/platform/: interrupt.rs  mod.rs  numa.rs  pci.rs
src/sdt/: bgrt.rs  facs.rs  fadt.rs  hpet.rs  madt.rs  mcfg.rs  mod.rs  slit.rs  spcr.rs  srat.rs
test_os/: .gitignore  Cargo.toml  Makefile
test_os/src/: lib.rs  serial.rs
test_os/src/interrupts/: mod.rs
test_os/src/memory/: area_frame_allocator.rs  stack_allocator.rs
test_os/src/memory/paging/: mapper.rs  mod.rs  temporary_page.rs
test_os/src/x86_64/: boot.asm  grub.cfg
tests/: README.md  bank_fields.rs  basic.rs  basic_field.asl  buffer_fields.asl  buffer_logic.asl  complex_package.asl  de_ref_of.rs  external.asl  fields.asl  global_lock.rs  inc.asl  incdec.asl  index_field.asl  index_fields.asl  index_fields.rs  logical_not.asl  method.asl  multi_table.asl  name_search.rs  normal_fields.rs  object_type.asl  operation_region.rs  package.asl  package_sizeof.asl  pc-bios_acpi-dsdt.asl  power_res.asl  scopes.asl  static_assertions.rs  stray_opcodes_test.rs  string_logic.asl  thermal_zone.asl  to_integer.asl  to_x.asl  uacpi_examples.rs  while.asl
tests/test_infra/: check_cmd_handler.rs  listed_response_handler.rs  logging_handler.rs  mod.rs  null_handler.rs  std_test_handler.rs
tools/acpi_dumper/: Cargo.toml
tools/aml_test_tools/: Cargo.toml
tools/aml_test_tools/src/: lib.rs  pkglength.rs  result.rs  tables.rs
tools/aml_test_tools/src/handlers/: check_cmd_handler.rs  listed_response_handler.rs  logging_handler.rs  mod.rs  null_handler.rs  std_test_handler.rs
tools/aml_tester/: Cargo.toml
tools/aml_tester/src/: lib.rs  main.rs
tools/no_alloc_check/: Cargo.toml  README.md
tools/no_alloc_check/.cargo/: config.toml
tools/no_alloc_check/src/: main.rs  null_handler.rs
tools/uacpi_test_adapter/: Cargo.toml
tools/uacpi_test_adapter/src/: main.rs
