[package]
name = "acpi"
version = "0.1.0"
authors = ["Isaac Woods <isaacwoods.home@gmail.com>"]
repository = "https://github.com/rust-osdev/acpi"
description = "Library for parsing ACPI tables and AML"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
bit_field = "0.9.0"

[target.'cfg(not(test))'.dependencies]
log = "0.4.5"

[target.'cfg(test)'.dependencies]
log = { version = "0.4.5", features = ["std"] }
