[workspace]
members = ["tools/aml_tester", "tools/acpi_dumper"]
resolver = "2"

[package]
name = "acpi"
version = "5.1.0"
authors = ["Isaac Woods"]
repository = "https://github.com/rust-osdev/acpi"
description = "A pure-Rust library for interacting with ACPI"
categories = ["hardware-support", "no-std"]
readme = "../README.md"
license = "MIT/Apache-2.0"
edition = "2024"

[dependencies]
bit_field = "0.10.2"
bitflags = "2.5.0"
log = "0.4.20"
spinning_top = "0.3.0"
pci_types = { version = "0.10.0", public = true, optional = true }
byteorder = { version = "1.5.0", default-features = false }

[features]
default = ["alloc", "aml"]
alloc = []
aml = ["alloc", "pci_types"]
