[workspace]
members = ["tools/aml_test_tools"]
# PILOT-FOLLOWUP: the other tools (aml_tester, acpi_dumper, uacpi_test_adapter)
# reference the pre-refactor API; they need their own port. aml_test_tools is
# the only one load-bearing for the in-repo integration test suite.
exclude = ["tools/aml_tester", "tools/acpi_dumper", "tools/uacpi_test_adapter"]
resolver = "2"

[package]
name = "acpi"
version = "6.2.0"
authors = ["Isaac Woods"]
repository = "https://github.com/rust-osdev/acpi"
description = "A pure-Rust library for interacting with ACPI"
categories = ["hardware-support", "no-std"]
license = "MIT/Apache-2.0"
edition = "2024"

[dependencies]
bit_field = "0.10.2"
bitflags = "2.5.0"
log = "0.4.20"
spinning_top = "0.3.0"
pci_types = { version = "0.10.0", public = true }
byteorder = { version = "1.5.0", default-features = false }

[dev-dependencies]
aml_test_tools = { path = "tools/aml_test_tools" }
pretty_env_logger = "0.5.0"

[features]
default = ["alloc", "aml"]
alloc = []
aml = ["alloc"]
