[package]
name = "acpi"
version = "4.1.1"
authors = ["Isaac Woods"]
repository = "https://github.com/rust-osdev/acpi"
description = "Library for parsing ACPI tables"
categories = ["hardware-support", "no-std"]
readme = "../README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
bit_field = "0.10"
rsdp = { version = "2", path = "../rsdp" }
