[package]
name = "acpi"
version = "4.1.1"
authors = ["Isaac Woods"]
repository = "https://github.com/rust-osdev/acpi"
description = "Library for parsing ACPI tables"
categories = ["hardware-support", "no-std"]
readme = "../README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
bit_field = "0.10.2"
log = "0.4.20"
rsdp = { version = "2", path = "../rsdp" }

[features]
default = ["allocator_api", "alloc"]
allocator_api = []
alloc = ["allocator_api"]
