[package]
name = "acpi"
version = "5.0.0"
authors = ["Isaac Woods"]
repository = "https://github.com/rust-osdev/acpi"
description = "A pure-Rust library for parsing ACPI tables"
categories = ["hardware-support", "no-std"]
readme = "../README.md"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
bit_field = "0.10.2"
bitflags = "2.5.0"
log = "0.4.20"

[features]
default = ["allocator_api", "alloc"]
allocator_api = []
alloc = ["allocator_api"]
