[package]
name = "aml"
version = "0.5.0"
authors = ["Isaac Woods"]
repository = "https://github.com/rust-osdev/acpi"
description = "Library for parsing AML"
categories = ["hardware-support", "no-std"]
readme = "../README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
bit_field = "0.10"
byteorder = { version = "1", default-features = false }

[features]
debug_parser = []
debug_parser_verbose = []
