[package]
name = "aml"
version = "0.16.1"
authors = ["Isaac Woods"]
repository = "https://github.com/rust-osdev/acpi"
description = "Library for parsing AML"
categories = ["hardware-support", "no-std"]
readme = "../README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
bit_field = "0.10"
byteorder = { version = "1", default-features = false }
bitvec = { version = "0.22.3", default-features = false, features = ["alloc", "atomic"] }
spinning_top = "0.2.4"
