[package]
name = "aml"
version = "0.17.0"
edition = "2024"
authors = ["Isaac Woods"]
repository = "https://github.com/rust-osdev/acpi"
description = "Library for parsing AML"
categories = ["hardware-support", "no-std"]
readme = "../README.md"
license = "MIT/Apache-2.0"

[dependencies]
spinning_top = "0.3.0"
bit_field = "0.10.2"
byteorder = { version = "1.5.0", default-features = false }
log = "0.4"
pci_types = "0.10.0"
