[package]
name = "test_os"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>",
           "Isaac Woods <isaacwoods.home@gmail.com>"]

[dependencies]
bit_field = "0.7.0"
bitflags = "1.0.3"
#multiboot2 = "0.1.0"
once = "0.3.2"
rlibc = "1.0"
spin = "0.4.5"
volatile = "0.1.0"
x86_64 = "0.1.2"
linked_list_allocator = "0.6.*"

# Until rust-osdev/multiboot2-elf64#45 lands, we patch with Pebble's repo
[dependencies.multiboot2]
git = "https://github.com/pebble-os/multiboot2-elf64"

[dependencies.acpi]
path = ".."

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2.1"

[lib]
crate-type = ["staticlib"]
